lib_LTLIBRARIES = libaudiere.la

include_HEADERS = \
	audiere.h

libaudiere_la_SOURCES = \
	audiere.cpp \
	data_types.cpp \
	data_types.hpp \
	file_ansi.cpp \
	file.hpp \
	output.cpp \
	output.hpp \
	output_al.cpp \
	output_al.hpp \
	output_null.cpp \
	output_null.hpp \
	threads_posix.cpp \
	threads.hpp

libaudiere_la_LDFLAGS = \
	-release $(VERSION)
