dnl Process this file with autoconf to produce a configure script.

dnl Boilerplate code.

AC_INIT(src/audiere.h)
AC_CONFIG_AUX_DIR(config)

AC_CANONICAL_SYSTEM

MAJOR_VERSION=1
MINOR_VERSION=2
PATCH_VERSION=0
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION
PACKAGE="audiere"

AC_SUBST(MAJOR_VERSION)
AC_SUBST(MINOR_VERSION)
AC_SUBST(PATCH_VERSION)
AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for options.

AC_ARG_ENABLE(debug,
    AC_HELP_STRING(--enable-debug, build debug),
    CXXFLAGS="$CXXFLAGS -g"
    AC_DEFINE(DEBUG))

dnl Checks for programs.

AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl If building on Cygwin, link with winmm when using OpenAL
case $host in
  *cygwin*)
    AL_LIBS=-lwinmm
    ;;
esac

AC_CHECK_LIB(pthread, pthread_create,,AC_MSG_RESULT(no)
    AC_MSG_ERROR(could not find pthread library))
AC_CHECK_LIB(openal, alBufferData,
    HAVE_OPENAL=true
    AC_DEFINE(HAVE_OPENAL)
    LIBS="$LIBS -lopenal $AL_LIBS",, $AL_LIBS)
AC_SEARCH_LIBS(clock_gettime, rt,
    AC_DEFINE(HAVE_CLOCK_GETTIME))

AM_CONDITIONAL(HAVE_OPENAL, test x$HAVE_OPENAL = xtrue)

dnl Checks for header files.

AC_HEADER_STDC
AC_CHECK_HEADER(unistd.h)
AC_CHECK_HEADER(sys/soundcard.h,
    HAVE_OSS=true
    AC_DEFINE(HAVE_OSS))
AC_CHECK_HEADER(vorbis/vorbisfile.h,,AC_MSG_RESULT(no)
    AC_MSG_ERROR(could not find vorbisfile header))

AM_CONDITIONAL(HAVE_OSS, test x$HAVE_OSS = xtrue)

dnl Checks for typedefs, structures, and compiler characteristics.

AC_C_BIGENDIAN

dnl Output makefiles.

AC_SUBST(WORDS_BIGENDIAN)
AC_OUTPUT(
	Makefile
	doc/Makefile
        examples/Makefile
        examples/simple/Makefile
        src/Makefile
        src/mikmod/Makefile
        src/mikmod/mikmod/Makefile
        src/mikmod/mikmod/loaders/Makefile
        src/mikmod/mikmod/virtch/Makefile
        src/mikmod/mikmod/virtch/resfilter/Makefile
        src/mikmod/mmio/Makefile
        test/Makefile
        test/buffer/Makefile
        test/device/Makefile
        test/interactive/Makefile
)
