noinst_LTLIBRARIES = libmpegsound.la

libmpegsound_la_SOURCES = \
	bitwindow.cpp \
	fileinput.cpp \
	filter.cpp \
	filter_2.cpp \
	huffmantable.cpp \
	mpeglayer1.cpp \
	mpeglayer2.cpp \
	mpeglayer3.cpp \
	mpegsound.h \
	mpegsound_locals.h \
	mpegtable.cpp \
	mpegtoraw.cpp \
	soundinputstream.cpp \
	soundplayer.cpp
