noinst_LTLIBRARIES = libmmio.la

libmmio_la_SOURCES =				\
	log.c					\
	log.h					\
	mmalloc.c				\
	mmconfig.c				\
	mmconfig.h				\
	mmcopy.c				\
	mmerror.c				\
	mmforbid.h				\
	mmgetopt.h				\
	mminline.h				\
	mmio.c					\
	mmio.h					\
	mmtypes.h                               \
	posix_mmforbid.c
